--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>AirBnB</title>
+    <meta charset="utf-8">
+    <title>AirBnB</title>
   </head>
   <body style="margin:0; padding:0;">
     <header style="background-color:#FF0000; height:70px; width:100%;"></header>
