--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>AirBnB</title>
-        <link rel="stylesheet" href="styles/2-header.css">
-        <link rel="stylesheet" href="styles/2-common.css">
-        <link rel="stylesheet" href="styles/2-footer.css">
+        <link rel="stylesheet" href="/styles/2-common.css">
+        <link rel="stylesheet" href="/styles/2-footer.css">
+        <link rel="stylesheet" href="/styles/2-header.css">
     </head>
     <body>
         <header>
