--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -18,16 +18,18 @@
                     <h3>States</h3>
                     <h4>Florida...</h4>
                     <ul class="popover">
-                        <li><h2>Arizona</h2></li>
-                        <ul>
-                            <li>Page</li>
-                            <li>Page2</li>
+                        <li><h2>Arizona</h2>
+                            <ul>
+                                <li>Page</li>
+                                <li>Page2</li>
                         </ul>
-                        <li><h2>California</h2></li>
-                        <ul>
-                            <li>San Fransisco</li>
-                            <li>Los Altos</li>
-                        </ul>
+                        </li>
+                        <li><h2>California</h2>
+                            <ul>
+                                <li>San Fransisco</li>
+                            <li>    Los Altos</li>
+                            </ul>
+                        </li>
                     </ul> 
                 </div>
                 <div class="amenities">
